--- a/force-app/main/default/lwc/sudoku/sudoku.html
+++ b/force-app/main/default/lwc/sudoku/sudoku.html
@@ -32,8 +32,7 @@
 									variant="brand"
 									label="Reset"
 									onclick={resetGame}
-									class="slds-m-left_x-small"
-									disabled={isHintsNotAvailable}>
+									class="slds-m-left_x-small">
 						</lightning-button>
 				</center>
 				<br>
